[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tpm"
version = "4.2"
description = "Provides functions to work with TeamPasswordManager API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Andreas Hubert", email = "anhubert@gmail.com" },
]
keywords = ["TeamPasswordManager", "json", "api"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "requests>=2.31,<3",
  "urllib3>=1.26,<3",
]

[project.urls]
Homepage = "https://github.com/peshay/tpm"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
  "requests-mock>=1.12,<2",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
]

[tool.setuptools]
py-modules = ["tpm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

